--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">cs160_prog3</string>
     <string name="title_activity_comment_feed">Comment Feed</string>
+    <string name="username">Username</string>
+    <string name="start">Start</string>
 </resources>
